--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
         		<div id="sporociId"></div>
         		<br>
         		<div id="rezultati1"></div>
+        		<br>
+        		<div id="rezultati2"></div>
+        		<br>
+        		<div id="rezultati3"></div>
       		</div>
     	</div>
 	</div>
